# c-file-transfer

./: CMakeLists.txt  README.md  launch.sh
include/: client.h  common.h  server.h  statusbar.h
src/: client.c  server.c
